fixed sticky z-index

--- a/extensions/system/theme/css/theme.css
+++ b/extensions/system/theme/css/theme.css
@@ -7119,7 +7119,7 @@ a.uk-datepicker-table-muted {
   position: fixed;
   top: 50px;
   left: 50px;
-  z-index: 980;
+  z-index: 1040;
   -moz-box-sizing: border-box;
   box-sizing: border-box;
   width: 350px;
